[package]
name = "zilch"
version = "0.1.0"
authors = ["Michaël Lévesque-Dion <mlevesquedion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zilch"
path = "src/lib.rs"

[[bin]]
name = "zilch"
path = "src/main.rs"
